Temporarily removed the projects section and modified the footer

--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kross | Portfolio Template</title>
+  <title>Benjamin</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  
+
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
@@ -19,7 +19,7 @@
 
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
-  
+
   <!--Favicon-->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -28,175 +28,177 @@
 
 <body>
 
-<header class="navigation fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/logo.png" alt="Myself"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-      aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <header class="navigation fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/logo.png" alt="Myself"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+        aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse text-center" id="navigation">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="about.html">about</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">projects</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+      <div class="collapse navbar-collapse text-center" id="navigation">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="about.html">about</a>
+          </li>
+<!--           <li class="nav-item">
+            <a class="nav-link" href="projects.html">projects</a>
+          </li> -->
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-<!-- page title -->
-<section class="page-title-alt bg-primary position-relative">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1 class="text-white font-tertiary">About Me</h1>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /page title -->
-
-<!-- about -->
-<section class="section pt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <p>I'm Ben. I just finished my second year at Northeastern University studying Computer Science.</p>
-        <p>I love programming, and I've been doing it since middle school.</p>
-        <p>Some of my hobbies are listening to audiobooks, playing video games, and learning languages.</p>
-      </div>
-      <div class="col-md-4 text-center drag-lg-top">
-        <div class="shadow-down mb-4">
-          <img src="images/me.jpg" alt="author" class="img-fluid w-100 rounded-lg border-thick border-white">
-        </div>
-        <h4>Benjamin Knower</h4>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /about -->
-
-<!-- experience -->
-<section class="section">
-  <div class="container">
-    <div class="row justify-content-around">
-      <div class="col-lg-12 text-left">
-        <h2 class="section-title">Experience</h2>
-      </div>
-      <div class="col-lg-3 col-md-4 text-left">
-        <p class="mb-0">Sep 2019 - Present</p>
-        <h4>Embedded Design Course Assistant</h4>
-        <h6 class="text-light">Northeastern University</h6>
-      </div>
-      <div class="col-lg-3 col-md-4 text-left">
-        <p class="mb-0">Dec 2018 - May 2019</p>
-        <h4>Math Department Tutor</h4>
-        <h6 class="text-light">Northeastern University</h6>
-      </div>
-      <div class="col-lg-3 col-md-4 text-center">
-        <p class="mb-0">Jun 2019 - Aug 2019</p>
-        <h4>Instructor</h4>
-        <h6 class="text-light">iD Tech Camps</h6>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- ./experience -->
-
-<!-- skills -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-left">
-        <h2 class="section-title">Skills</h2>
-      </div>
-    </div>
-  </div>
-  
-  <div class="container">
-    <div class="client-logo-slider d-flex align-items-center">
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/c.png"
-          alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/cpp.png" alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/java.jpg" alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/python.png" alt="client-logo"></a>
-      <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
-          src="images/clients-logo/rust.jpg" alt="client-logo"></a>
-    </div>
-  </div>
-</section>
-<!-- /skills -->
-
-<!-- education -->
-<section class="section position-relative">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-left">
-        <h2 class="section-title">Education</h2>
-      </div>
-      <div class="col-lg-6 col-md-6 mb-80">
-        <div class="d-flex">
-          <div class="mr-lg-5 mr-3">
-            <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
-          </div>
-          <div>
-            <p class="text-dark mb-1">2018 - Present</p>
-            <h4>Bachelor's of Science in Computer Science</h4>
-            <p class="mb-0 text-light">Northeastern University</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /education -->
-
-
-<!-- footer -->
-<footer class="bg-dark footer-section">
-  <div class="section">
+  <!-- page title -->
+  <section class="page-title-alt bg-primary position-relative">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <h5 class="text-light">Email</h5>
-          <p class="text-white paragraph-lg font-secondary">steve.fruits@email.com</p>
-        </div>
-        <div class="col-md-4">
-          <h5 class="text-light">Phone</h5>
-          <p class="text-white paragraph-lg font-secondary">+880 2544 658 256</p>
-        </div>
-        <div class="col-md-4">
-          <h5 class="text-light">Address</h5>
-          <p class="text-white paragraph-lg font-secondary">125/A, CA Commercial Area, California, USA</p>
+        <div class="col-12">
+          <h1 class="text-white font-tertiary">About Me</h1>
         </div>
       </div>
     </div>
-  </div>
-</footer>
-<!-- /footer -->
+  </section>
+  <!-- /page title -->
 
-<!-- jQuery -->
-<script src="plugins/jQuery/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<!-- slick slider -->
-<script src="plugins/slick/slick.min.js"></script>
-<!-- filter -->
-<script src="plugins/shuffle/shuffle.min.js"></script>
+  <!-- about -->
+  <section class="section pt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <p>I'm Ben. I just finished my second year at Northeastern University studying Computer Science.</p>
+          <p>I love programming, and I've been doing it since middle school.</p>
+          <p>Some of my hobbies are listening to audiobooks, playing video games, and learning languages.</p>
+        </div>
+        <div class="col-md-4 text-center drag-lg-top">
+          <div class="shadow-down mb-4">
+            <img src="images/me.jpg" alt="author" class="img-fluid w-100 rounded-lg border-thick border-white">
+          </div>
+          <h4>Benjamin Knower</h4>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /about -->
 
-<!-- Main Script -->
-<script src="js/script.js"></script>
+  <!-- experience -->
+  <section class="section">
+    <div class="container">
+      <div class="row justify-content-around">
+        <div class="col-lg-12 text-left">
+          <h2 class="section-title">Experience</h2>
+        </div>
+        <div class="col-lg-3 col-md-4 text-left">
+          <p class="mb-0">Sep 2019 - Present</p>
+          <h4>Embedded Design Course Assistant</h4>
+          <h6 class="text-light">Northeastern University</h6>
+        </div>
+        <div class="col-lg-3 col-md-4 text-left">
+          <p class="mb-0">Dec 2018 - May 2019</p>
+          <h4>Math Department Tutor</h4>
+          <h6 class="text-light">Northeastern University</h6>
+        </div>
+        <div class="col-lg-3 col-md-4 text-center">
+          <p class="mb-0">Jun 2019 - Aug 2019</p>
+          <h4>Instructor</h4>
+          <h6 class="text-light">iD Tech Camps</h6>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ./experience -->
+
+  <!-- skills -->
+  <section class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-left">
+          <h2 class="section-title">Skills</h2>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="client-logo-slider d-flex align-items-center">
+        <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+            src="images/clients-logo/c.png" alt="client-logo"></a>
+        <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+            src="images/clients-logo/cpp.png" alt="client-logo"></a>
+        <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+            src="images/clients-logo/java.jpg" alt="client-logo"></a>
+        <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+            src="images/clients-logo/python.png" alt="client-logo"></a>
+        <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid"
+            src="images/clients-logo/rust.jpg" alt="client-logo"></a>
+      </div>
+    </div>
+  </section>
+  <!-- /skills -->
+
+  <!-- education -->
+  <section class="section position-relative">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-left">
+          <h2 class="section-title">Education</h2>
+        </div>
+        <div class="col-lg-6 col-md-6 mb-80">
+          <div class="d-flex">
+            <div class="mr-lg-5 mr-3">
+              <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
+            </div>
+            <div>
+              <p class="text-dark mb-1">2018 - Present</p>
+              <h4>Bachelor's of Science in Computer Science</h4>
+              <p class="mb-0 text-light">Northeastern University</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /education -->
+
+
+  <!-- footer -->
+  <footer class="bg-dark footer-section">
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h5 class="text-light">Email</h5>
+            <p class="text-white paragraph-sm font-secondary">knower.b@northeastern.edu</p>
+          </div>
+
+          <div class="col-md-4">
+            <h5 class="text-light">Social Media</h5>
+            <p class="text-white paragraph-lg font-secondary">
+              <a class="nav-link" href="https://www.linkedin.com/in/benjamin-knower-b39b52181/"><i
+                  class="ti-linkedin"></i></a>
+              <a class="nav-link" href="https://github.com/bknower"><i class="ti-github"></i></a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- /footer -->
+
+  <!-- jQuery -->
+  <script src="plugins/jQuery/jquery.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="plugins/bootstrap/bootstrap.min.js"></script>
+  <!-- slick slider -->
+  <script src="plugins/slick/slick.min.js"></script>
+  <!-- filter -->
+  <script src="plugins/shuffle/shuffle.min.js"></script>
+
+  <!-- Main Script -->
+  <script src="js/script.js"></script>
 
 </body>
+
 </html>
