--- a/piTiles.html
+++ b/piTiles.html
@@ -115,7 +115,16 @@
       <div class="row">
         <div class="col-md-4">
           <h5 class="text-light">Email</h5>
-          <p class="text-white paragraph-lg font-secondary">knower.b@northeastern.edu</p>
+          <p class="text-white paragraph-sm font-secondary">knower.b@northeastern.edu</p>
+        </div>
+
+        <div class="col-md-4">
+          <h5 class="text-light">Social Media</h5>
+          <p class="text-white paragraph-lg font-secondary">
+            <a class="nav-link" href="https://www.linkedin.com/in/benjamin-knower-b39b52181/"><i
+                class="ti-linkedin"></i></a>
+            <a class="nav-link" href="https://github.com/bknower"><i class="ti-github"></i></a>
+          </p>
         </div>
       </div>
     </div>
