--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  
+
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
@@ -19,7 +19,7 @@
 
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
-  
+
   <!--Favicon-->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -30,99 +30,112 @@
 
 
 
-<header class="navigation fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/logo.png" alt="Myself"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-      aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse text-center" id="navigation">
-      <ul class="navbar-nav ml-left">
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/benjamin-knower-b39b52181/"><i class="ti-linkedin"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/bknower"><i class="ti-github"></i></a>
-        </li>
+  <header class="navigation fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand font-tertiary h3" href="index.html"><img src="images/logo.png" alt="Myself"></a>
 
-      </ul>
-    </div>
-    
-    <div class="collapse navbar-collapse text-center" id="navigation">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
+      <div class="collapse navbar-collapse text-center" id="social">
+        <ul class="navbar-nav ml-left">
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/benjamin-knower-b39b52181/"><i
+                class="ti-linkedin"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/bknower"><i class="ti-github"></i></a>
+          </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">about</a>
-        </li>
+        </ul>
+      </div>
 
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">projects</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
 
-<!-- hero area -->
-<section class="hero-area bg-primary" id="parallax">
-  <div class="container"></div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+        aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse text-center" id="navigation">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">about</a>
+          </li>
+
+          <!--           <li class="nav-item">
+            <a class="nav-link" href="projects.html">projects</a>
+          </li> -->
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <!-- hero area -->
+  <section class="hero-area bg-primary" id="parallax">
+    <div class="container"></div>
     <div class="row">
       <div class="col-lg-11 mx-auto">
         <h1 class="text-white font-tertiary">Benjamin Knower</h1>
       </div>
     </div>
-  </div>
-</section>
-<!-- /hero area -->
-
-<!-- about -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 mx-left text-left">
-        <p class="font-secondary paragraph-lg text-dark">I'm a student at Northeastern University studying Computer Science.<br>
-          Check out some of my <a href="projects.html">projects</a> or read some more <a href="about.html">about me</a>.</p>
-      </div>
     </div>
-  </div>
-</section>
-<!-- /about -->
-<section>
-  <object classid="java:bMapped.class" width="100" height="100" archive="maze.jar">
-    <param name="param" value="val" />
-  </object>
-</section>
+  </section>
+  <!-- /hero area -->
 
-<!-- footer -->
-<footer class="bg-dark footer-section">
-  <div class="section">
+  <!-- about -->
+  <section class="section">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <h5 class="text-light">Email</h5>
-          <p class="text-white paragraph-lg font-secondary">knower.b@northeastern.edu</p>
+        <div class="col-lg-10 mx-left text-left">
+          <p class="font-secondary paragraph-lg text-dark">I'm a student at Northeastern University studying Computer
+            Science.<br>
+            <!--             Check out some of my <a href="projects.html">projects</a> or read some more <a href="about.html">about
+ -->
+            Read some more <a href="about.html">about me</a>.</p>
         </div>
       </div>
     </div>
-  </div>
-</footer>
-<!-- /footer -->
+  </section>
+  <!-- /about -->
 
-<!-- jQuery -->
-<script src="plugins/jQuery/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<!-- slick slider -->
-<script src="plugins/slick/slick.min.js"></script>
-<!-- filter -->
-<script src="plugins/shuffle/shuffle.min.js"></script>
 
-<!-- Main Script -->
-<script src="js/script.js"></script>
+  <!-- footer -->
+  <footer class="bg-dark footer-section">
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h5 class="text-light">Email</h5>
+            <p class="text-white paragraph-sm font-secondary">knower.b@northeastern.edu</p>
+          </div>
+
+          <div class="col-md-4">
+            <h5 class="text-light">Social Media</h5>
+            <p class="text-white paragraph-lg font-secondary">
+              <a class="nav-link" href="https://www.linkedin.com/in/benjamin-knower-b39b52181/"><i
+                  class="ti-linkedin"></i></a>
+              <a class="nav-link" href="https://github.com/bknower"><i class="ti-github"></i></a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- /footer -->
+
+  <!-- jQuery -->
+  <script src="plugins/jQuery/jquery.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="plugins/bootstrap/bootstrap.min.js"></script>
+  <!-- slick slider -->
+  <script src="plugins/slick/slick.min.js"></script>
+  <!-- filter -->
+  <script src="plugins/shuffle/shuffle.min.js"></script>
+
+  <!-- Main Script -->
+  <script src="js/script.js"></script>
 
 </body>
+
 </html>
